# gridsearch-skyband

./: .gitignore  README.md  main.py  pyproject.toml  run_experiment.py
config/: default.config
config/experiments/: BertPLI.config  BertPLI2.config  BertPLI3.config  BertPLI4.config
config/nlp/: AttenGRU.config  AttenLSTM.config  BertPoint.config  BertPoolOutMax.config
data/: task1_test_labels_2024.json  test_paragraphs_processed_data.json  test_task1.json  train_task2.json  train_task2_v2.json  train_task2_v3.json  valid_task2.json
dataset/: __init__.py
dataset/nlp/: JsonFromFiles.py  __init__.py
dataset/others/: FilenameOnly.py
docs/: GRIDSEARCH.md  OVERVIEW.md  PIPELINE.md  RELATORIO_TECNICO.md  REPORT_SOURCE.md
formatter/: Basic.py  __init__.py
formatter/nlp/: AttenRNNFormatter.py  BertDocParaFormatter.py  BertPairTextFormatter.py  bert_feature_tool.py
gridsearch/: __init__.py  analysis.py  core.py  skyband.py  utils.py
gridsearch/config/: grid_search.json  grid_search_minimal.json  grid_search_multienv.json  (+2 more)
model/: __init__.py  loss.py  optimizer.py
scripts/: __init__.py  parse_results.py  poolout.py  poolout_to_train.py  test.py  train.py
tests/: conftest.py  test_checkpoint.py  test_device.py  test_eval_metrics.py  test_gridsearch.py  test_gridsearch_config.py  test_init_tool_state.py  test_optimizer.py  test_run_experiment_fixes.py  test_skyband.py  test_warmup_scheduler.py
tools/: accuracy_tool.py  dataset_tool.py  eval_tool.py  init_tool.py  poolout_tool.py  test_tool.py  train_tool.py
utils/: __init__.py  config.py  device.py  log_setup.py  paths.py  reader.py  seed.py  util.py
(+3 files in other folders)
