[project]
name = "experimentobert-pli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "codecarbon>=3.2.2",
    "configparser>=7.2.0",
    "datasets>=4.5.0",
    "numpy>=2.2.6",
    "psutil>=7.2.2",
    "tensorboard>=2.14",
    "torch>=2.9.0",
    "torchaudio>=2.4.0",
    "torchvision>=0.20.0",
    "tqdm>=4.67.1",
    "transformers[torch]>=5.2.0",
]

[project.scripts]
bert-pli-train            = "scripts.train:main"
bert-pli-test             = "scripts.test:main"
bert-pli-poolout          = "scripts.poolout:main"
bert-pli-poolout-to-train = "scripts.poolout_to_train:main"
bert-pli-parse-results    = "scripts.parse_results:main"

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
torchaudio = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
